# devflow

./: .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/: api-reference.md  command-reference.md  configuration.md  contributing.md  deployment.md  init-walkthrough.md  knowledge-transfer.md  plugin.md  testing-guide.md  troubleshooting.md  usage.md
examples/: sample.devflow.yaml
packaging/: nfpm.yaml
packaging/windows/: installer.iss
packaging/winget/: devflow.yaml
plugins/: devflow-plugin-infra-check.py
scripts/: build-packages.sh  generate-homebrew-formula.sh
src/: cli.rs  lib.rs  main.rs
src/commands/: dash.rs  deps.rs  env.rs  init.rs  logs.rs  mod.rs  plugin.rs  port.rs  snap.rs  up.rs  watch.rs
src/plugin/: mod.rs
src/utils/: config.rs  envcheck.rs  language.rs  mod.rs  ports.rs  sanitize.rs  snapshot.rs
tests/: integration.rs  unit.rs
tests/fixtures/node_repo/: package.json
tests/fixtures/rust_repo/: Cargo.toml
tests/integration/: cli_tests.rs
tests/unit/: utils_tests.rs
